--- a/.github/workflows/compress.yml
+++ b/.github/workflows/compress.yml
@@ -1,15 +1,37 @@
-name: action
+name: Docker Pull and Push to Release
 
 on:
-  schedule:
-    - cron: "0 9-10 * * *"
-  workflow_dispatch:
+  push:
+    tags:
+      - 'v*'  # 触发条件：当推送一个以 'v' 开头的标签时
 
 jobs:
-  checkin:
+  pull-and-push:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: Caiyou1001/cordcloud-action@main
-        with:
-          email: ${{ secrets.CC_EMAIL }}
-          passwd: ${{ secrets.CC_PASSWD }}
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+    - name: Pull Docker image
+      run: docker pull fatedier/frps:v0.61.2
+
+    - name: Save Docker image as tar
+      run: docker save -o frps_v0.61.2.tar fatedier/frps:v0.61.2
+
+    - name: Upload tar to Release
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ github.event.release.upload_url }}
+        asset_path: ./frps_v0.61.2.tar
+        asset_name: frps_v0.61.2.tar
+        asset_content_type: application/x-tar
